--- a/requirements/requirements_vc.txt
+++ b/requirements/requirements_vc.txt
@@ -1,5 +1,5 @@
+# Requirements for vc examples
 jupyter~=1.0.0
 matplotlib~=3.7.1
 tno.quantum.ml.datasets~=1.2.1
 tno.quantum.ml.classifiers.vc~=2.0.2
-tno.quantum.communication.qkd_key_rate==1.0.0
